Remove emit declaration only flag in tsconfig

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "restor-data-types",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Shared data types for the Restor platform.",
-  "main": "dist/src/index.d.ts",
+  "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "dependencies": {
     "@turf/turf": "^5.1.6",
