--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restor-data-types",
   "version": "1.7.3",
   "description": "Shared data types for the Restor platform.",
-  "main": "dist/src/index.js",
+  "main": "src/index.ts",
   "types": "dist/src/index.d.ts",
   "dependencies": {
     "@turf/turf": "^5.1.6",
