--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "restor-data-types",
   "version": "1.7.3",
   "description": "Shared data types for the Restor platform.",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "firebase-admin": "^9.3.0",
